Began Implementing Dialog
—Imported Angular Material
—Dialog pops up
—Checkboxes from main page handed over to the dialog controller
—Collapsable elements used to close and open filter options

--- a/public/client/css/styles.css
+++ b/public/client/css/styles.css
@@ -10,3 +10,12 @@ html {
 .thumbnail:hover {
 	background-color: #19C7E7;
 }
+
+.panel {
+	margin: 0;
+}
+
+.md-dialog-container {
+	height: 100%;
+	z-index: 1031;
+}
