--- a/public/client/views/legislators/legislators.html
+++ b/public/client/views/legislators/legislators.html
@@ -57,28 +57,9 @@
 			</div>
 			<div class="small-12 columns hide-for-large">
 				<!-- Button trigger modal -->
-				<button type="button" class="btn-block btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-				Launch demo modal
-				</button>
-
-				<!-- Modal -->
-				<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-					<div class="modal-dialog" role="document">
-						<div class="modal-content">
-							<div class="modal-header">
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-								<h4 class="modal-title" id="myModalLabel">Modal title</h4>
-								</div>
-								<div class="modal-body">
-								...
-								</div>
-								<div class="modal-footer">
-								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-								<button type="button" class="btn btn-primary">Save changes</button>
-							</div>
-						</div>
-					</div>
-				</div> <!-- Modal -->
+			    <md-button class="md-primary md-raised" ng-click="model.showAdvanced($event)">
+			      Filter
+			    </md-button>
 
 			</div>
 
