--- a/public/client/views/legislators/legislatorsFilterDialog.html
+++ b/public/client/views/legislators/legislatorsFilterDialog.html
@@ -8,7 +8,7 @@
       <div class="md-toolbar-tools">
        	<span class="glyphicon glyphicon-remove" ng-click="model.cancel()"></span>
         <span flex></span>
-        <md-button ng-click="model.answer('Yes')">
+        <md-button ng-click="model.filter()">
           Filter
         </md-button>
       </div>
@@ -16,51 +16,21 @@
 
 	<md-dialog-content>	
 
-		<div class="panel panel-default" data-toggle="collapse" data-target="#partyFilters" aria-expanded="false" ria-controls="collapseExample">
-		  <div class="panel-body">
-		    <span class="glyphicon glyphicon-plus"></span> Party
-		  </div>
-			</div>
-			<div class="collapse" id="partyFilters">
-				<div class="panel panel-default">
-				  <!-- List group -->
-				  <ul class="list-group">
-				  	<li class="list-group-item" ng-repeat="item in model.filters.parties">
-				  		{{item.displayValue}} <span class="glyphicon glyphicon-ok pull-right" ng-show="item.isChecked"></span>
-				  	</li>
-				  </ul>
+		<div ng-repeat="filterGroup in model.filterGroups">
+			<div class="panel panel-default" data-toggle="collapse" data-target="#{{filterGroup.id}}" aria-expanded="false" aria-controls="">
+				<div class="panel-body">
+					<span class="glyphicon glyphicon-plus"></span> {{filterGroup.name}} 
+					<span class="glyphicon glyphicon-ok pull-right" ng-show="filterGroup.selectedFilterCount > 0"></span>
 				</div>
 			</div>
-
-		<div class="panel panel-default" data-toggle="collapse" data-target="#chamberFilters" aria-expanded="false" ria-controls="collapseExample">
-		  <div class="panel-body">
-		    <span class="glyphicon glyphicon-plus"></span> Chamber
-		  </div>
-		</div>
-		<div class="collapse" id="chamberFilters">
-		  	<div class="panel panel-default">
-			  <!-- List group -->
-			  <ul class="list-group">
-			  	<li class="list-group-item" ng-repeat="item in model.filters.chambers">
-			  		{{item.displayValue}} <span class="glyphicon glyphicon-ok pull-right" ng-show="item.isChecked"></span>
-			  	</li>
-			  </ul>
-			</div>
-		</div>
-
-		<div class="panel panel-default" data-toggle="collapse" data-target="#stateFilters" aria-expanded="false" ria-controls="collapseExample">
-		  <div class="panel-body">
-		    <span class="glyphicon glyphicon-plus"></span> State
-		  </div>
-		</div>
-		<div class="collapse" id="stateFilters">
-			<div class="panel panel-default">
-			  <!-- List group -->
-			  <ul class="list-group">
-			  	<li class="list-group-item" ng-repeat="item in model.filters.states">
-			  		{{item.displayValue}} <span class="glyphicon glyphicon-ok pull-right" ng-show="item.isChecked"></span>
-			  	</li>
-			  </ul>
+			<div class="collapse" id="{{filterGroup.id}}">
+				<div class="panel panel-default">
+					<ul class="list-group">
+						<li class="list-group-item" ng-repeat="filter in filterGroup.filters" ng-click="model.onSelectFilter(filterGroup, filter)">
+							{{filter.displayValue}} <span class="glyphicon glyphicon-ok pull-right" ng-show="filter.isChecked"></span>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 
