--- a/public/client/views/legislatorDetail/legislatorDetail.html
+++ b/public/client/views/legislatorDetail/legislatorDetail.html
@@ -128,7 +128,21 @@
 				</p>	
 			</div>
 
-			<div class="small-12 columns" ng-show="model.currentSubView === 'votes'" ng-repeat="vote in model.information.votes.data">vote</div>
+			<div class="small-6 medium-3 columns thumbnail" ng-show="model.currentSubView === 'votes'" ng-repeat="vote in model.information.votes.data">
+				<p>
+					<strong>{{vote.question}}</strong>
+				</p>
+				<p class="text-center">For</p>
+				<p ng-show="vote.bill.short_title">
+					{{vote.bill.short_title}}
+				</p>
+				<p ng-show="!vote.bill.short_title">
+					{{vote.bill.official_title}}
+				</p>
+				<p>
+					{{vote.voted_at | date : "longDate"}} @{{vote.voted_at | date : "shortTime"}}
+				</p>
+			</div>
 
 			<!-- buttons -->
 			<button class="btn-lg btn-block btn-primary hide-for-small-only" ng-show="model.information[model.currentSubView].data.length < model.information[model.currentSubView].totalCount" ng-click="model.getMoreSubViewData(32)">Load More</button>
