Filters has been Modularized!
—Separated filter to separate page, controller
—Implemented FilterService
—Updated views to us ng-include for filters

--- a/public/client/css/styles.css
+++ b/public/client/css/styles.css
@@ -19,3 +19,11 @@ html {
 	height: 100%;
 	z-index: 1031;
 }
+
+a:not(.md-button) {
+	color: #337ab7;
+}
+
+a:not(.md-button).btn-primary {
+	color: white;
+}
