--- a/public/client/views/legislators/legislators.html
+++ b/public/client/views/legislators/legislators.html
@@ -1,31 +1,14 @@
-<!DOCTYPE html>
+'<!DOCTYPE html>
 <html>
 <head>
 	<link href="./client/css/foundation 6/foundation.css" rel="stylesheet">
 </head>
 <body>
+<h1 class="text-center">Current Legislators</h1>
 <div class="row">
-	<div class="large-12 columns" style="padding-bottom:0;">
-		<h1 class="text-center">Current Legislators</h1>
-	</div>
+		
 	<div class="large-3 show-for-large columns">
-
-		<div class="row">
-			<div class="large-12 columns" style="padding-top:0;padding-bottom:0" ng-repeat="filterGroup in model.filterGroups">
-				<div class="row">
-					<div class="large-12 columns" style="padding-top:0;padding-bottom:0;">
-						<u><h4>{{filterGroup.name}}</h4></u>
-					</div>
-	 				<div class="large-12 columns" style="padding-top:0;padding-bottom:0;" ng-repeat="checkBox in filterGroup.filters">
-						<input type="checkbox" ng-model="checkBox.isChecked" ng-change="model.filterLegislators()">
-						<span>
-							{{checkBox.displayValue}}
-						</span>
-					</div>			
-				</div>
-			</div>
-		</div>
-
+		<div ng-include="'./client/views/filters/filters.html'" ng-controller="FiltersController as model"></div>
 	</div>
 
 	<div class="small-12 large-9 columns">
