--- a/public/client/views/overview/overview.html
+++ b/public/client/views/overview/overview.html
@@ -1,59 +1,109 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="./client/css/foundation 6/foundation.css" rel="stylesheet">
+	<link href="./client/css/landing-page.css" rel="stylesheet">
 </head>
 <body>
-	<h1 class="text-center">Recent Activity</h1>
-	<h2>{{message}}</h2>
+    <div class="intro-header">
+        <div class="container">
 
-	<h2 class="text-center">Votes</h2>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="intro-message">
+                        <h1>My Politics</h1>
+                        <h3>Spreading Political Knowledge, Encouraging Political Participation</h3>
+                        <hr class="intro-divider">
+                        <ul class="list-inline intro-social-buttons">
+                            <li>
+                                <a href="#/legislators" class="btn btn-default btn-lg"><span class="network-name">Legislators</span></a>
+                            </li>
+                            <li>
+                                <a href="#/votes" class="btn btn-default btn-lg"><span class="network-name">Votes</span></a>
+                            </li>
+                            <li>
+                                <a href="#/bills" class="btn btn-default btn-lg"><span class="network-name">Bills</span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
-	<div class="row">
-		<div class="col-xs-6 col-md-3">
-			<div class="thumbnail">
-				<img src="https://theunitedstates.io/images/congress/225x275/S000033.jpg" alt="Congressman" class="img-responsive">
-				<div class="caption">
-					<h3>Thumbnail label</h3>
-					<p>BERNIE!</p>
-					<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-				</div>
-			</div>
-		</div>
+        </div>
+        <!-- /.container -->
 
-		<div class="col-xs-6 col-md-3">
-			<div class="thumbnail">
-				<img src="https://theunitedstates.io/images/congress/225x275/S000033.jpg" alt="Congressman">
-				<div class="caption">
-					<h3>Thumbnail labdafadsfdsafdsel</h3>
-					<p>BERNIE!</p>
-					<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-				</div>
-			</div>
-		</div>
+    </div>
+    <!-- /.intro-header -->
 
-		<div class="col-xs-6 col-md-3">
-			<div class="thumbnail">
-				<img src="https://theunitedstates.io/images/congress/225x275/S000033.jpg" alt="Congressman">
-				<div class="caption">
-					<h3>Thumbnail labdafadsfdsafdsel</h3>
-					<p>BERNIE!</p>
-					<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-				</div>
-			</div>
-		</div>
+    <!-- Page Content -->
 
-		<div class="col-xs-6 col-md-3">
-			<div class="thumbnail">
-				<img src="https://theunitedstates.io/images/congress/225x275/S000033.jpg" alt="Congressman" class="img-responsive">
-				<div class="caption">
-					<h3>Thumbnail label</h3>
-					<p>BERNIE!</p>
-					<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-				</div>
-			</div>
-		</div>
-	</div>
+	<a  name="services"></a>
+    <div class="content-section-a">
 
-	<h2 class="text-center">Bills</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Get To Know Your Legislators!</h2>
+                    <p class="lead">Who are the Senators from Florida?<br>How many Republicans are in the House of Representatives?<br>Interested in seeing how a particular legislator is voting?<br><br>Find all of this information and more!</p>
+                </div>
+                <div class="col-sm-6">
+                    <img class="img-responsive" src="http://ww1.hdnux.com/photos/50/20/67/10554844/3/920x1240.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-a -->
+
+    <div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-sm-push-6  col-sm-6">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">See Which Votes Are Being Held!</h2>
+                    <p class="lead">Votes are how Congress gets things done. Which action items are getting votes? Which bills? Which nominations? How is your representative voting?<br><br>
+
+                   	Also get a visual breakdown of votes by party!</p>
+                </div>
+                <div class="col-sm-pull-6 col-sm-6">
+                    <img class="img-responsive" src="./client/images/votes.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
+
+    <div class="content-section-a">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Explore Congress' Bills</h2>
+                    <p class="lead">Search for any topic that interests you such and see the laws relating to that topic that our Congress is considering. Follow a bill's life cycle from when they are proposed to when the President signs them (or vetoes them).
+
+                   	You can also get details such as the bill's sponsor and cosponsors!</p>
+                </div>
+                <div class="col-sm-6">
+                    <img class="img-responsive" src="http://media.npr.org/assets/img/2015/12/10/essa-edit_custom-235c1ae54b2e7709fe35b6c3632e2ae6e1f4f99b-s900-c85.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-a -->
+ 
+</div>
 </body>
 </html>
