--- a/public/client/views/legislators/legislators.html
+++ b/public/client/views/legislators/legislators.html
@@ -4,44 +4,56 @@
 	<link href="./client/css/foundation 6/foundation.css" rel="stylesheet">
 </head>
 <body>
-<h1 class="text-center">Current Legislators</h1>
-<div class="row">
-		
-	<div class="large-3 show-for-large columns">
-		<div ng-include="'./client/views/filters/filters.html'" ng-controller="FiltersController as model"></div>
-	</div>
+	<h1 class="text-center">Current Legislators</h1>
 
-	<div class="small-12 large-9 columns">
+	<!-- Error Message -->
+	<div class="text-center alert alert-danger" ng-show="model.hasError">Error retrieving data! <br>Try <a href="" ng-click="model.refreshPage()">refreshing</a> the page or <a href="#/legslators">clearing your filters</a>.</div>
+
+	<!-- Content -->
+	<div class="container-fluid" ng-show="!model.hasError">
 		<div class="row">
-			<div class="small-12 columns" style="padding-top:0">
-				<span><strong>Count:</strong> {{model.displayedLegislators.length}}</span>
-				<form class="form-inline pull-right">
-					<label>Sort By: </label>
-					<select class="pull-right" ng-model="model.sortBy" ng-change="model.sortLegislators()">
-      					<option value="last_name__asc" select="selected">Last Name (ascending)</option>
-      					<option value="last_name__desc">Last Name (descending)</option>
-    				</select>
-				</form>
-			</div>
-			<div class="small-12 columns hide-for-large">
-				<div class="row">
-				<button class="btn btn-lg btn-primary small-6 columns hide-for-large" ng-click="model.showFilterPopup($event)">
-					Filter
-				</button>
-				</div>
+			
+			<div class="large-3 show-for-large columns">
+				<div ng-include="'./client/views/filters/filters.html'" ng-controller="FiltersController as model"></div>
 			</div>
 
-			<div class="thumbnail small-6 medium-3 columns" ng-repeat="legislator in model.displayedLegislators" ng-click="model.onLegislatorClick(legislator.bioguide_id)">
-				<img class="img-responsive" ng-src="https://theunitedstates.io/images/congress/225x275/{{legislator.bioguide_id}}.jpg"  alt="Legislator Image">
-				<div class="caption">
-					<h4>{{legislator.title}}. {{legislator.first_name}} {{legislator.last_name}} ({{legislator.party}})</h4>
-					<h4>{{legislator.state_name}}</h4>
-					<p></p>
+			<div class="small-12 large-9 columns">
+				<div class="small-12 columns text-center alert alert-info" ng-show="model.hasNoResults">There are no legislators that fit the combination of selected filters! Try another combination :)</div>
+
+				<div class="row">
+
+					<div class="small-12 columns" ng-show="!model.hasNoResults" style="padding-top:0">
+						<span><strong>Count:</strong> {{model.displayedLegislators.length}}</span>
+						<form class="form-inline pull-right">
+							<label>Sort By: </label>
+							<select class="pull-right" ng-model="model.sortBy" ng-change="model.sortLegislators()">
+		      					<option value="last_name__asc" select="selected">Last Name (ascending)</option>
+		      					<option value="last_name__desc">Last Name (descending)</option>
+		    				</select>
+						</form>
+					</div>
+
+					<div class="small-12 columns hide-for-large">
+						<div class="row">
+						<button class="btn btn-lg btn-primary small-6 columns hide-for-large" ng-click="model.showFilterPopup($event)">
+							Filter
+						</button>
+						</div>
+					</div>
+
+					<div class="thumbnail small-6 medium-3 columns" ng-repeat="legislator in model.displayedLegislators" ng-click="model.onLegislatorClick(legislator.bioguide_id)">
+						<img class="img-responsive" ng-src="https://theunitedstates.io/images/congress/225x275/{{legislator.bioguide_id}}.jpg"  alt="Legislator Image">
+						<div class="caption">
+							<h4>{{legislator.title}}. {{legislator.first_name}} {{legislator.last_name}} ({{legislator.party}})</h4>
+							<h4>{{legislator.state_name}}</h4>
+							<p></p>
+						</div>
+					</div>
 				</div>
 			</div>
+		
 		</div>
 	</div>
-	
-</div>
+
 </body>
 </html>
