--- a/public/client/views/votes/votes.html
+++ b/public/client/views/votes/votes.html
@@ -5,13 +5,33 @@
 </head>
 <body>
 	<h1 class="text-center">Congressional Votes</h1>
-	<div class="row">
+
+	<!-- Error Message -->
+	<div class="text-center alert alert-danger" ng-show="model.hasError">Error retrieving data! <br>Try <a href="" ng-click="model.refreshPage()">refreshing</a> the page or <a href="#/votes">clearing</a> your filters.</div>
+
+	<!-- Content -->
+	<div class="container-fluid" ng-show="!model.hasError">
+		<div class="row">
 			<div class="large-3 show-for-large columns">
 				<div ng-include="'./client/views/filters/filters.html'" ng-controller="FiltersController as model"></div>
 			</div>
 
 			<div class="small-12 large-9 columns">
 				<div class="row">
+					<div class="small-12 columns" ng-show="!model.hasNoResults">
+						<span><strong>Count: </strong>{{model.totalVoteCount}}</span>
+					</div>
+
+					<div class="small-12 columns text-center alert alert-info" ng-show="model.hasNoResults">There are no votes that fit the combination of selected filters! Try another combination :)</div>
+
+					<div class="small-12 columns hide-for-large">
+						<div class="row">
+							<button class="btn btn-lg btn-primary small-6 columns hide-for-large" ng-click="model.showFilterPopup($event)">
+							Filter
+							</button>
+						</div>
+					</div>
+					
 					<div class="small-6 medium-3 columns thumbnail" ng-repeat="vote in model.votes" ng-click="model.onVoteClick(vote.roll_id)">
 						<p>
 							<strong>{{vote.question}}</strong>
@@ -37,6 +57,8 @@
 					</div>
 				</div>
 			</div>
+		</div>
 	</div>
+
 </body>
 </html>
