--- a/public/client/views/billDetail/billDetail.html
+++ b/public/client/views/billDetail/billDetail.html
@@ -7,14 +7,17 @@
 	<!-- Error Message -->
 	<div class="text-center alert alert-danger" ng-show="model.hasError">Error retrieving data! <br>Try <a href="" ng-click="model.refreshPage()">refreshing</a> the page or navigating back to the <a href="#/bills">Bills page</a>.</div>
 	
-	<!-- Content -->
+	<!-- Content, shown if there is no retrieving data -->
 	<div class="container" ng-show="!model.hasError">
+		<!-- Show Short Title if available, Official Title otherwise --> 
 		<h1 class="text-center" ng-show="!model.currentBill.short_title">{{model.currentBill.official_title}}</h1>
 		<h1 class="text-center" ng-show="model.currentBill.short_title">{{model.currentBill.short_title}}</h1>
+
 		<h2 class="text-center">Bill {{model.currentBill.bill_type | uppercase}} {{model.currentBill.number}}</h2>
 		<h2 class="text-center">Introduced on: {{model.currentBill.introduced_on | date : "longDate"}}</h2>
 		<h2 class="text-center">Introduced in the <span ng-show="model.currentBill.chamber === 'house'">House of Representatives</span> <span ng-show="model.currentBill.chamber === 'senate'">Senate</span> </h2>
 		
+		<!-- Sponsor -->
 		<h3>Sponsor:</h3>
 		<div class="row thumbnail" ng-click="model.onLegislatorClick(model.currentBill.sponsor.bioguide_id)">
 			<div class="small-4 medium-2 columns">
@@ -25,12 +28,12 @@
 				<p>of {{model.currentBill.sponsor.state_name}}</p>
 			</div>
 		</div>
-		<br>
 
 		<!-- Cosponsors -->
 		<button class="btn-lg btn-primary btn-block" type="button" data-toggle="collapse" data-target="#cosponsors" aria-expanded="false" aria-controls="cosponsors" ng-show="model.currentBill.cosponsors.length > 0">
 		  {{model.currentBill.cosponsors.length}} Cosponsors <span class="caret"></span>
 		</button>
+
 		<div class="collapse well" id="cosponsors">
 			<div class="row">
 				<div class="small-6 medium-2 columns thumbnail" ng-repeat="cosponsor in model.currentBill.cosponsors" ng-click="model.onLegislatorClick(cosponsor.legislator.bioguide_id)">
@@ -42,26 +45,31 @@
 				</div>	
 			</div>
 		</div>
-		<br>
-
+		
+		<!-- Long and Short Summaries for Bills in Collapsable Divs -->
 		<button class="btn-lg btn-primary btn-block" type="button" data-toggle="collapse" data-target="#summary_short" aria-expanded="false" aria-controls="summary_short" ng-show="model.currentBill.summary_short">
 		  Short Summary <span class="caret"></span>
 		</button>
 		<div class="collapse well" id="summary_short" ng-show-"model.currentBill.summary">
 			<p>{{model.currentBill.summary_short}}</p>	
 		</div>
-		<br>
+
 		<button class="btn-lg btn-primary btn-block" type="button" data-toggle="collapse" data-target="#summary" aria-expanded="false" aria-controls="summary" ng-show-"model.currentBill.summary">
 		  Full Summary <span class="caret"></span>
 		</button>
 		<div class="collapse well" id="summary" ng-show-"model.currentBill.summary">
 			<p>{{model.currentBill.summary}}</p>	
 		</div>
-		<h2>Urls:</h2>
-		<p>
-			<span ng-repeat="property in model.urls"><a ng-href="{{model.currentBill.urls[property]}}" target="_blank">{{property}}</a>&nbsp; &nbsp; &nbsp; &nbsp;</span>			
-		</p>
 
+		<!-- Links For More Information On Bills  -->
+		<div ng-show="model.urls.length > 0">
+			<h2>Urls:</h2>
+			<p>
+				<span ng-repeat="property in model.urls"><a ng-href="{{model.currentBill.urls[property]}}" target="_blank">{{property}}</a>&nbsp; &nbsp; &nbsp; &nbsp;</span>			
+			</p>
+		</div>
+
+		<!-- Table View of Actions taken on bill -->
 		<h2>Actions Taken:</h2>
 		<table class="table table-striped">
 			<tr>
