--- a/public/client/views/bills/bills.html
+++ b/public/client/views/bills/bills.html
@@ -11,7 +11,9 @@
 
 	<!-- Content -->
 	<div class="container-fluid" ng-show="!model.hasError">
-			<div class="row">
+		
+		<!-- Search Bar -->
+		<div class="row">
 			<div class="small-12 medium-6 medium-offset-6 large-4 large-offset-4 columns">
 				<div class="input-group">
 					<input type="text" class="form-control" placeholder="Search for..." ng-model="model.searchTerm" ng-keypress="model.onKeyPress($event)">
@@ -26,6 +28,7 @@
 
 		<h4 class="text-center">{{model.totalBillCount | number}}{{model.displayMessage}}</h4>
 
+		<!-- Bills -->
 		<div class="row">
 			<div class="small-6 medium-3 large-2 columns thumbnail" ng-repeat="bill in model.bills" ng-click="model.onBillClick(bill.bill_id)">
 				<p class="text-right">
@@ -41,17 +44,27 @@
 					{{bill.last_action_at | date : "longDate"}} @{{bill.last_action_at | date : "shortTime"}}
 				</p>
 			</div>
+
+			<div class="small-12 columns" ng-show="model.loadingInformation">
+				<img class="center-block" src="./client/images/ring-alt.svg">
+			</div>
 		</div>
+
+		<!-- Error Message -->
+		<div class="text-center alert alert-danger" ng-show="model.hasLoadError">Error loading data! <br>Try loading more again.</div>
+
+		<!-- Load More Buttons -->
 		<div class="row">
 			<div class="small-12 columns show-for-small-only" ng-show="model.bills.length < model.totalBillCount">
 				<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreBills(24)">More Bills</button>
 			</div>
+
 			<div class="medium-4 medium-offset-4 columns hide-for-small-only" ng-show="model.bills.length < model.totalBillCount">
 				<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreBills(48)">More Bills</button>
 			</div>
 		</div>
-		<br>
-	</div>	
+
+	</div>	<!-- End of Container -->
 
 </body>
 </html>
