--- a/public/client/views/legislatorDetail/legislatorDetail.html
+++ b/public/client/views/legislatorDetail/legislatorDetail.html
@@ -15,13 +15,11 @@
 				<div class="row">
 					<div class="small-12 columns">
 						<img class="img-responsive center-block" ng-src="https://theunitedstates.io/images/congress/225x275/{{model.currentLegislatorId}}.jpg" >
-						<br>
+	
 						<div class="small-12 columns">
 							<a class="btn btn-primary btn-block" ng-href="{{model.currentLegislator.contact_form}}" ng-show="model.currentLegislator.contact_form" target="_blank">Contact</a>
 						</div>
 					</div>
-
-					<br>
 					
 					<!-- Social Media Icons -->
 					<div class="text-center small-12">
@@ -36,9 +34,9 @@
 			</div>
 
 			<div class="small-12 medium-8 columns">
-				<h1 style="margin-top:0;">{{model.currentLegislator.first_name}} {{model.currentLegislator.middle_name}} {{model.currentLegislator.last_name}} {{model.currentLegislator.name_suffix}} ({{model.currentLegislator.party}})</h1>
-				<h3 ng-show="model.currentLegislator.district" style="margin-top:0">{{model.currentLegislator.district}}<sup>{{model.repDistrictOrdinalSuffix}}</sup> District of {{model.currentLegislator.state_name}}</h3>
-				<h3 ng-show="model.currentLegislator.state_rank" style="margin-top:0">{{model.currentLegislator.state_rank.substring(0,1) | uppercase}}{{model.currentLegislator.state_rank.substring(1)}} Senator from {{model.currentLegislator.state_name}}</h3>
+				<h1>{{model.currentLegislator.first_name}} {{model.currentLegislator.middle_name}} {{model.currentLegislator.last_name}} {{model.currentLegislator.name_suffix}} ({{model.currentLegislator.party}})</h1>
+				<h3 ng-show="model.currentLegislator.district">{{model.currentLegislator.district}}<sup>{{model.repDistrictOrdinalSuffix}}</sup> District of {{model.currentLegislator.state_name}}</h3>
+				<h3 ng-show="model.currentLegislator.state_rank">{{model.currentLegislator.state_rank.substring(0,1) | uppercase}}{{model.currentLegislator.state_rank.substring(1)}} Senator from {{model.currentLegislator.state_name}}</h3>
 				
 				<!-- Information in table format -->
 				<table class="table">
@@ -96,9 +94,9 @@
 		</div> <!-- End of row-->
 
 		<div class="row">
-			<div class="small-4 columns text-center" style="background-color:blue;color:white;padding-top:15px;padding-bottom:15px" ng-click="model.setSubView('votes')">Recent Votes</div>
-			<div class="small-4 columns text-center" style="background-color:red;color:white;padding-top:15px;padding-bottom:15px" ng-click="model.setSubView('sponsoredBills')">Sponsored Bills</div>
-			<div class="small-4 columns text-center" style="background-color:red;color:white;padding-top:15px;padding-bottom:15px" ng-click="model.setSubView('cosponsoredBills')">Cosponsored Bills</div>
+			<div class="small-4 columns text-center" ng-click="model.setSubView('votes')">Recent Votes</div>
+			<div class="small-4 columns text-center" ng-click="model.setSubView('sponsoredBills')">Sponsored Bills</div>
+			<div class="small-4 columns text-center" ng-click="model.setSubView('cosponsoredBills')">Cosponsored Bills</div>
 		</div>
 
 		<div class="row">
@@ -142,8 +140,12 @@
 					</tr>
 					<tr ng-repeat="currentVote in model.information.votes.data">
 						<td>{{currentVote.question}}</td>
-						<td>{{currentVote.bill.official_title}}</td>
-						<td>{{currentVote.voters[model.currentLegislatorId].vote}}</td>
+						<td>
+							<a ng-href="#/bill/{{currentVote.bill.bill_id}}">{{currentVote.bill.official_title}}</a>
+						</td>
+						<td>
+							<a href="#/vote/{{currentVote.roll_id}}">{{currentVote.voters[model.currentLegislatorId].vote}}</a>
+						</td>
 						<td>{{currentVote.result}}</td>
 					</tr>
 				</table>
