--- a/public/client/views/voteDetail/voteDetail.html
+++ b/public/client/views/voteDetail/voteDetail.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,12 +10,15 @@
 
 	<!-- Content -->
 	<div class="container" ng-show="!model.hasError">
+		
+		<!-- Vote Metadata -->
 		<h1 class="text-center">{{model.currentVote.question}}</h1>
 		<h2 class="text-center" ng-show="model.currentVote.bill != undefined && model.currentVote.bill.short_title != undefined">Bill: <a ng-href="#/bill/{{model.currentVote.bill_id}}">{{model.currentVote.bill.short_title}}</a></h2>
 		<h2 class="text-center" ng-show="model.currentVote.bill != undefined && model.currentVote.bill.short_title === undefined">Bill: <a ng-href="#/bill/{{model.currentVote.bill_id}}">{{model.currentVote.bill.official_title}}</a></h2>
 		<h2 class="text-center">Result: {{model.currentVote.result}}</h2>
 		<h2 class="text-center" ng-show="model.currentVote.nomination != undefined">Nomination: {{model.currentVote.nomination.nominees[0].name}} for {{model.currentVote.nomination.organization}}</h2>
 
+		<!-- Vote Details -->
 		<table class="table table-striped">
 			<tr>
 				<td><strong>Chamber:</strong></td>
@@ -36,6 +40,7 @@
 			</tr>
 		</table>
 
+		<!-- Vote Charts -->
 		<div class="row">
 			<div class="small-6 columns thumbnail">
 				<fusioncharts width="100%" height="300" type="bar2d" dataSource="{{model.democratDataSource}}"></fusioncharts>
@@ -48,6 +53,7 @@
 			</div>
 		</div>
 
+		<!-- Tabular Vote Breakdown -->
 		<h3>Vote Totals</h3>
 		<table class="table table-striped">
 			<tr>
@@ -80,6 +86,7 @@
 			</tr>
 		</table>
 		
+		<!-- Vote By Legislator Table -->
 		<h3>Vote By Legislator</h3>
 		<table class="table table-striped">
 			<tr>
