--- a/public/client/views/votes/votes.html
+++ b/public/client/views/votes/votes.html
@@ -12,10 +12,12 @@
 	<!-- Content -->
 	<div class="container-fluid" ng-show="!model.hasError">
 		<div class="row">
+			<!-- Filters -->
 			<div class="large-3 show-for-large columns">
 				<div ng-include="'./client/views/filters/filters.html'" ng-controller="FiltersController as model"></div>
 			</div>
 
+			<!-- Votes -->
 			<div class="small-12 large-9 columns">
 				<div class="row">
 					<div class="small-12 columns" ng-show="!model.hasNoResults">
@@ -48,6 +50,11 @@
 						</p>
 					</div>
 				</div>
+
+				<!-- Error Message -->
+				<div class="text-center alert alert-danger" ng-show="model.hasLoadError">Error loading data! <br>Try loading more again.</div>
+
+				<!-- Load More Buttons -->
 				<div class="row">
 					<div class="small-12 columns show-for-small-only" ng-show="model.votes.length < model.totalVoteCount">
 						<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreVotes(24)">More Votes</button>
